server support member system
ready to M 2.75

--- a/MoveAlarmServ/src/main/java/com/ma/view/result.html
+++ b/MoveAlarmServ/src/main/java/com/ma/view/result.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Result</h1>
-<p th:text="'id: ' + ${greeting.id}" />
-<p th:text="'content: ' + ${greeting.content}" />
-<a href="/greeting">Submit another message</a>
+<p th:text="'idFb: ' + ${member.id}" />
+<p th:text="'name: ' + ${member.name}" />
+<a href="/insert">Submit another message</a>
 </body>
 </html>
