--- a/MoveAlarmServ/src/main/java/com/ma/view/submiss.html
+++ b/MoveAlarmServ/src/main/java/com/ma/view/submiss.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
+<form action="#" th:action="@{/insert}" th:object="${member}" method="post">
     <p>Id: <input type="text" th:field="*{id}" /></p>
-    <p>Message: <input type="text" th:field="*{content}" /></p>
+    <p>Name: <input type="text" th:field="*{name}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
