--- a/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/content_end_office.xml
+++ b/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/content_end_office.xml
@@ -40,6 +40,22 @@
             </Button>
         </RelativeLayout>
     </RelativeLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_below="@id/banner"
+        android:background="@mipmap/bgstart2"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/profilepicture"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/movealarm_icon"
+        android:layout_below="@id/banner"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -67,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:textSize="24dp"
                     android:id="@+id/hrCID"
                     />
             </RelativeLayout>
@@ -118,6 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:textSize="24dp"
                     android:id="@+id/mnCID"
                     />
             </RelativeLayout>
