--- a/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/content_event.xml
+++ b/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/content_event.xml
@@ -44,5 +44,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/banner"></ListView>
+        android:layout_below="@id/banner"
+        android:id="@+id/listview"></ListView>
 </RelativeLayout>
