--- a/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/content_main.xml
+++ b/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity"
-    android:background="@mipmap/background">
+    android:background="@color/bgmain">
     <RelativeLayout
         android:background="@color/colorheader"
         android:id="@+id/banner"
@@ -309,7 +309,7 @@
                 android:layout_centerHorizontal="true"
                 >
                 <RelativeLayout
-                    android:layout_width="@dimen/scircleboxLW"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:gravity="center"
@@ -320,10 +320,11 @@
                         android:onClick="onEventClick"
                         android:id="@+id/eventicon"
                         android:background="@mipmap/event_btn"
-                        android:layout_centerInParent="true"
                         android:layout_marginRight="10dp"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentStart="true" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -336,7 +337,7 @@
                         />
                 </RelativeLayout>
             <RelativeLayout
-                android:layout_width="@dimen/scircleboxLW"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:gravity="center"
