--- a/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/eventlist.xml
+++ b/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/res/layout/eventlist.xml
@@ -14,6 +14,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:id="@+id/uptoday"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/date"
                 android:textSize="18dp"/>
             <TextView
@@ -26,9 +31,12 @@
                 android:layout_height="wrap_content">
                 <ImageView
                     android:layout_centerInParent="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:scaleType="fitCenter"
+                    android:scrollX="@dimen/activity_vertical_margin"
                     android:id="@+id/image"
+                    android:background="@mipmap/no_image"
                     />
             </RelativeLayout>
             <TextView
